CKAD from KodeKloud/Network Policies/Developing Network Policies/egress-policy-example.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internal-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      name: internal
  policyTypes:
  - Egress
  - Ingress
  ingress:
  - {}
  egress:
  # разрешить исходящий трафик до pod-ов БД по порту 3306
  - to:
    - podSelector:
        matchLabels:
          name: mysql
    ports:
    - protocol: TCP
      port: 3306
  # разрешить исходящий трафик до pod-ов payroll по порту 8080
  - to:
    - podSelector:
        matchLabels:
          name: payroll
    ports:
    - protocol: TCP
      port: 8080
  # разрешить исходящий трафик по порту 53 для корректной работы DNS
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
